# Brain-AI-Assistant

./: .gitignore  Makefile  README.md  pyproject.toml  run_extraction.py
apps/brain_ai_assistant/: settings.py
apps/brain_ai_assistant/application/agents/: quality.py
apps/brain_ai_assistant/application/crawlers/: __init__.py  crawl4ai.py
apps/brain_ai_assistant/configs/: collect_notion_data.yaml  etl.yaml
apps/brain_ai_assistant/domain/: __init__.py  document.py
apps/brain_ai_assistant/infrastructure/mongo/: __init__.py  service.py
apps/brain_ai_assistant/infrastructure/notion/: database.py  document.py
apps/brain_ai_assistant/pipelines/: __init__.py  etl.py  fetch_notion_data.py
apps/brain_ai_assistant/steps/: __init__.py
apps/brain_ai_assistant/steps/etl/: __init__.py  add_quality_score.py  crawl.py
apps/brain_ai_assistant/tools/: run.py
brain_ai_assistant/: config.py  main.py  utils.py
brain_ai_assistant/configs/: collect_notion_data.yaml
brain_ai_assistant/domain/: document.py
brain_ai_assistant/infrastructure/: __init__.py
brain_ai_assistant/infrastructure/notion/: __init__.py  database.py  document.py
brain_ai_assistant/pipelines/: __init__.py  fetch_notion_data.py
brain_ai_assistant/research/: getting_data_from_notion.ipynb
brain_ai_assistant/steps/: __init__.py
brain_ai_assistant/steps/fetch_notion_data/: fetch_notion_documents.py  fetch_notion_documents_metadata.py
brain_ai_assistant/steps/infrastructure/: __init__.py  save_documents_to_disk.py
brain_ai_assistant/tools/: run.py
docker/: docker-compose.yml
(+7 files in other folders)
